--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <a href="https://upload.wikimedia.org/wikipedia/commons/e/e9/BlackHood.jpg " target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e9/BlackHood.jpg
         " alt="hero ">
     </a>
-    <p>A superbad superhero (sometimes rendered super-hero or super hero) is a type of heroic stock character who possesses supernatural
+    <p>A superbad Many superhero (sometimes rendered super-hero or super hero) is a type of heroic stock character who possesses supernatural
         or superhuman powers and who is dedicated to fighting crime, protecting the public, and usually battling supervillains.
         A female superhero is sometimes called a superheroine (also rendered super-heroine or super heroine), although the
         word superhero is commonly used for females also. superhero fiction is the genre of fiction that is centered on such
