--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>superhero</h1>
     <div>
-        <span><a href="#section-19">Go 1940</a></span> <span><a href="#section-contents">Go contents</a></span>
+        <span><a href="#section-common">Go 1940</a></span> <span><a href="#section-contents">Go contents</a></span>
         <hr>
     </div>
 
